fix a bunch of warnings, mostly deprecation and unused imports
* replace deprecated org.junit.Assert.assertThat by MatcherAsseert.assertThat;
* replace deprecated ZoomStyle.create with three Arguments with not deprecated five Arguments version
* replace deprecated BeansObservables.observeValue
* replace deprecated SWTObservables.observeSelection
* replace deprecated SWTObservable.getRealm with DisplayRealm.getRealm
* replace deprecated SWTObservable.observeSize
* replace deprecated SWTObservable.observeText
* replace deprecated ImageDescriptor.getImageData without arguments by the not deprecated one Argument version
* replace deprecated Class.newInstance